--- a/styles/baseline/_colors.scss
+++ b/styles/baseline/_colors.scss
@@ -2,6 +2,6 @@
 $color-white: #FFFFFF;
 $color-black: #000000;
 
-$color-primary: #2E7DC3;
+$color-primary: #31253B;
 $color-secondary: #0B4E89;
 $color-tertiary: #50D7B6;
