--- a/styles/baseline/_animations.scss
+++ b/styles/baseline/_animations.scss
@@ -4,3 +4,13 @@ $global-transition: all $hover-duration ease-in;
 .hover-animation-basic {
 	transition: all $hover-duration ease-in;
 }
+
+@keyframes fadeIn {
+  0% { opacity: 0; transform: scale(0.95); }
+  100% { opacity: 1; transform: initial; }
+}
+
+@keyframes fadeInUp {
+  0% { opacity: 0; transform: translateY(100px); }
+  100% { opacity: 1; transform: initial; }
+}
