--- a/components/molecules/Searcher/Searcher.module.scss
+++ b/components/molecules/Searcher/Searcher.module.scss
@@ -6,10 +6,10 @@
   padding: 20px;
   position: fixed;
   bottom: 0;
-  right: 50%;
-  transform: translateX(50%);
   background-color: $color-white;
   border-radius: 30px 30px 0 0;
+  animation: fadeInUp 1s;
+  transition: $global-transition;
 }
 
 .input {
