--- a/components/molecules/WeatherCard/WeatherCard.module.scss
+++ b/components/molecules/WeatherCard/WeatherCard.module.scss
@@ -5,7 +5,7 @@
   width: 100%;
   border-radius: 10px;
   overflow: hidden;
-  box-shadow: rgba(#453449, 0.65) 0px 25px 20px -10px;
+  box-shadow: rgba($color-primary, 0.65) 0px 25px 20px -10px;
   background-color: $color-primary;
   animation: fadeIn 1s;
   transition: $global-transition;
